Fix Dockerfile for Java 25